package OperationsMath;

public interface Element {

    public int eval();

}
